# opsail

./: .gitattributes  .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md
.github/scripts/: refit-codex-smoke.mjs
.github/workflows/: installers.yml  refit-codex.yml  release.yml  skills.yml
crates/opsail/: Cargo.toml
crates/opsail-chrome/: Cargo.toml  README.md
crates/opsail-chrome/src/: cdp.rs  launcher.rs  lib.rs  rendered.rs
crates/opsail-chrome/tests/: cdp.rs
crates/opsail-gateway-model/: Cargo.toml  README.md
crates/opsail-gateway-model/examples/: model-event-mapping.toml
crates/opsail-gateway-model/src/: error.rs  event.rs  lib.rs  mapped.rs  mapping.rs  responses.rs  server.rs  sse.rs
crates/opsail-read/: Cargo.toml  README.md
crates/opsail-read/src/: error.rs  extract.rs  lib.rs  model.rs  source.rs  standardize.rs  verification.rs
crates/opsail-read/tests/: acquisition.rs  cdp.rs  fixtures.rs
crates/opsail-read/tests/expected/: 01-article-noise.md  02-metadata-jsonld-og.md  03-code-relative-assets.md  04-tables-regular-irregular.md  05-unsafe-hidden-content.md  06-short-cjk-main.md  07-lazy-images.md  08-highlighted-code.md  09-multiple-code-blocks.md  10-wechat-hidden-content.md  11-hidden-semantic-root.md
crates/opsail-read/tests/fixtures/: 01-article-noise.html  02-metadata-jsonld-og.html  03-code-relative-assets.html  04-tables-regular-irregular.html  05-unsafe-hidden-content.html  06-short-cjk-main.html  07-lazy-images.html  08-highlighted-code.html  09-multiple-code-blocks.html  10-wechat-hidden-content.html  11-hidden-semantic-root.html
crates/opsail-refit-codex/: CONTEXT.md  Cargo.toml  README.md
crates/opsail-refit-codex/assets/: locales.json  opsail-refit-codex-dom-adapter.js  opsail-refit-codex-model-picker.js  opsail-refit-codex-renderer-control.js  opsail-refit-codex-renderer-probe.js  opsail-refit-codex-update.json  opsail-refit-codex-usage-disable.js  opsail-refit-codex-usage-early.js  opsail-refit-codex-usage-model.js  opsail-refit-codex-usage-runtime.js  opsail-refit-codex-usage-status.js  opsail-refit-codex-usage.css
crates/opsail-refit-codex/assets/locales/: en.json  zh-CN.json
crates/opsail-refit-codex/src/: atomic_file.rs  cdp.rs  error.rs  github_update.rs  launch.rs  lib.rs  lifecycle.rs  model.rs  model_picker.rs  payload.rs  platform.rs  renderer_assets.rs  renderer_session.rs  state.rs  supervisor.rs
crates/opsail-refit-codex/src/platform/: windows.rs  windows_native.rs
crates/opsail-refit-codex/src/platform/windows_native/: windows.rs
crates/opsail/src/: activity.rs  codex.rs  config.rs  gateway.rs  gateway_auth.rs  machine.rs  main.rs
crates/opsail/tests/: cli.rs
scripts/: install.ps1  install.sh
skills/bootstrap-opsail/: SKILL.md
skills/bootstrap-opsail/scripts/: install.ps1  install.sh
skills/opsail/: SKILL.md
