[workspace]
members = [
    "crates/opsail",
    "crates/opsail-chrome",
    "crates/opsail-read",
    "crates/opsail-refit-codex",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
authors = ["Opsail contributors"]
readme = "README.md"
repository = "https://github.com/lencx/opsail"

[workspace.dependencies]
ammonia = "4.1.3"
assert_cmd = "2.2.2"
clap = { version = "4.6.1", features = ["derive"] }
dom_query = { version = "0.28.0", default-features = false, features = ["markdown", "mini_selector"] }
dom_smoothie = { version = "0.18.0", features = ["serde"] }
encoding_rs = "0.8.35"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
miette = { version = "7.6.0", features = ["fancy-no-backtrace"] }
libc = "0.2.183"
predicates = "3.1.4"
process-wrap = { version = "9.1.0", default-features = false, features = ["job-object", "kill-on-drop", "tokio1"] }
reqwest = { version = "0.13.4", default-features = false, features = ["brotli", "charset", "gzip", "http2", "rustls-no-provider", "stream", "system-proxy", "zstd"] }
ring = "0.17.14"
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
unicode-segmentation = "1.13.3"
url = { version = "2.5.8", features = ["serde"] }
wiremock = "0.6.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = "symbols"
