[package]
name = "opsail-chrome"
description = "Chrome lifecycle and CDP capture for Opsail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
futures-util.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true

[target.'cfg(windows)'.dependencies]
process-wrap.workspace = true

[lints]
workspace = true
