[package]
name = "opsail-refit-codex"
description = "Safe Codex renderer refits for Opsail"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
futures-util.workspace = true
reqwest.workspace = true
ring.workspace = true
rustls.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "ApplicationModel",
    "ApplicationModel_Core",
    "Foundation",
    "Foundation_Collections",
    "Management_Deployment",
    "Storage",
    "Storage_Search",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Com",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_UI_Shell",
] }

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
