[package]
name = "opsail"
description = "Composable actions for software agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "opsail"
path = "src/main.rs"

[dependencies]
clap.workspace = true
miette.workspace = true
opsail-read = { path = "../opsail-read", version = "0.1.0" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
