[package]
name = "opsail"
description = "Native tools that agents can rely on"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "opsail"
path = "src/main.rs"

[dependencies]
clap.workspace = true
indicatif.workspace = true
http.workspace = true
libc.workspace = true
miette.workspace = true
opsail-read = { path = "../opsail-read", version = "0.2.0" }
opsail-refit-codex = { path = "../opsail-refit-codex", version = "0.1.0" }
opsail-gateway-model = { path = "../opsail-gateway-model", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
